@@ -12,7 +12,6 @@ ideas for future versions:
   @pencil
   [ ] In COMMENTS/notes and requirements, show not only the title but the description
   [ ] Support Diagram-Types: List, Sequence, Timing, Profile, Parametric, Interaction-Overview
-  [ ] Beautify relations where source and destination is identical
   [ ] include and extends relationships shall show their stereotype
   @data
   [ ] more relationship types needed: requirements have derive and refine relations
